[gd_scene load_steps=5 format=3 uid="uid://puxwuptxkf8"]

[ext_resource type="Script" path="res://visualfs/narrator/popup_input.gd" id="1_cno2n"]
[ext_resource type="FontFile" uid="uid://cgett34sxgpkt" path="res://shared/JetBrainsMonoNerdFontMono-Regular.ttf" id="2_hb8h2"]
[ext_resource type="Texture2D" uid="uid://p2qtk5ccvwp1" path="res://shared/bordered.png" id="2_vsc3g"]
[ext_resource type="Texture2D" uid="uid://do7vmtvdv60x6" path="res://narrator/assets/continue.svg" id="3_3fqrj"]

[node name="PopupInput" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_cno2n")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
z_index = 1
layout_mode = 1
offset_right = 729.0
offset_bottom = 152.0
texture = ExtResource("2_vsc3g")
patch_margin_left = 26
patch_margin_top = 26
patch_margin_right = 26
patch_margin_bottom = 26

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 730.0
offset_bottom = 152.0
focus_mode = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(730, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hb8h2")
theme_override_font_sizes/font_size = 36

[node name="Cancel" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
texture_normal = ExtResource("3_3fqrj")

[connection signal="focus_exited" from="VBoxContainer" to="." method="_on_child_focus_exited"]
[connection signal="focus_exited" from="VBoxContainer/LineEdit" to="." method="_on_child_focus_exited"]
[connection signal="text_submitted" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="focus_exited" from="VBoxContainer/Cancel" to="." method="_on_child_focus_exited"]
[connection signal="pressed" from="VBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
